--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remixicon": "^3.3.0",
+    "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
@@ -18,8 +20,12 @@
     "@testing-library/user-event": "14.4.3",
     "@types/react": "18.0.28",
     "@types/testing-library__jest-dom": "5.14.5",
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^3.0.1",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "typescript": "4.9.5"
   }
 }
